--- a/index.ipynb
+++ b/index.ipynb
@@ -72,7 +72,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Code here "
+    "import numpy as np\n",
+    "\n",
+    "# Adding 1D arrays\n",
+    "a = np.array([1,2,3])\n",
+    "b = np.array ([4,5,6]) \n",
+    "c = a + b\n",
+    "c"
    ]
   },
   {
