--- a/index.ipynb
+++ b/index.ipynb
@@ -203,7 +203,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Code here "
+    "A = np.array([[1, 2], [3, 4], [5, 6]])\n",
+    "B = np.array([[1, 4], [2, 5]])\n",
+    "# Add matrices A and B\n",
+    "C = A + B\n",
+    "C"
    ]
   },
   {
