Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -289,11 +289,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5 6 7]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Code here "
+    "print(a+4)"
    ]
   },
   {
