--- a/index.ipynb
+++ b/index.ipynb
@@ -301,7 +301,11 @@
     }
    ],
    "source": [
-    "print(a+4)"
+    "A = np.array([[1, 2], [3, 4], [5, 6]])\n",
+    "print(A)\n",
+    "B = np.array([[2], [4], [6]])\n",
+    "print(B)\n",
+    "A+B"
    ]
   },
   {
