--- a/index.ipynb
+++ b/index.ipynb
@@ -289,15 +289,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[5 6 7]\n"
+      "[[1 2]\n",
+      " [3 4]\n",
+      " [5 6]]\n",
+      "[[2]\n",
+      " [4]\n",
+      " [6]]\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 3,  4],\n",
+       "       [ 7,  8],\n",
+       "       [11, 12]])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
